Fixing spacing in album.less

--- a/pari/static/css/album.less
+++ b/pari/static/css/album.less
@@ -1,29 +1,25 @@
 @import "grid.less";
 
-h3 {
-  .section-header;
-}
-
 .popup-gallery {
-  .album-images {
-    .grid-row (50px, 50px);
+    .album-images {
+        .grid-row (50px, 50px);
 
-    .grid-column {
+        .grid-column {
 
-      .caption {
-        p {
-          float: left;
+            .caption {
+                p {
+                    float: left;
+                }
+
+                .audio-icon {
+                    i {
+                        float: right;
+                    }
+                }
+
+            }
         }
-
-        .audio-icon {
-          i {
-            float: right;
-          }
-        }
-
-      }
     }
-  }
 }
 
 .album-header {
@@ -34,5 +30,5 @@ h3 {
     h1 {
         margin-bottom: 10px;
     }
-        margin-bottom: 40px;
+    margin-bottom: 40px;
 }
